[package]
name = "etcdr"
version = "0.1.0"
authors = ["zerosign <r1nlx0@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = { version = "0.1.0-alpha.3", features = ["rustls"] }
prost = "0.5.0"
tokio = "=0.2.0-alpha.6"
futures-preview = { version = "=0.3.0-alpha.19", default-features = false, features = ["alloc"]}

[build-dependencies]
tonic-build = { version = "0.1.0-alpha.3" }